jp-postal-code/src/snapshots/jp_postal_code__usecase__tests__search_postal_code.snap
---
source: jp-postal-code/src/usecase.rs
expression: records
---
[
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640941",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "アサヒガオカ",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "旭ケ丘",
        has_multi_postal_code: 0,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西２０丁目",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西２１丁目",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西２２丁目",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西２３丁目",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西２４丁目",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西２５丁目",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西２６丁目",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西２７丁目",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西２８丁目",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
    UtfKenAllRecord {
        local_government_code: "01101",
        old_postal_code: "064  ",
        postal_code: "0640820",
        prefecture_kana: "ホッカイドウ",
        city_kana: "サッポロシチュウオウク",
        town_kana: "オオドオリニシ（２０−２８チョウメ）",
        prefecture: "北海道",
        city: "札幌市中央区",
        town: "大通西",
        has_multi_postal_code: 1,
        has_chome: 0,
        has_multi_town: 1,
        update_code: 0,
        update_reason: 0,
    },
]
